--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,6 +4,9 @@
     <title>Регистрация</title>
 </head>
 <body>
+<div th:if="${error}">
+    <p>Ошибка (имя пользователя занято)</p>
+</div>
 <h1>Форма регистрации</h1>
 <form th:action="@{/register}" method="post">
     <label for="username">Имя пользователя:</label>
@@ -16,6 +19,7 @@
     <input type="password" id="password" name="password" required />
     <br/>
     <button type="submit">Зарегистрироваться</button>
+    <p>Уже зарегистрированы? <a href="/login">Войти</a></p>
 </form>
 </body>
 </html>
