--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,6 +4,7 @@
   <title>Вход</title>
 </head>
 <body>
+<a th:href="@{/}">На главную</a>
 <div th:if="${error}">
   <p>Ошибка входа (неправильное имя пользователя или пароль)</p>
 </div>
