--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,6 +4,7 @@
     <title>Регистрация</title>
 </head>
 <body>
+<a th:href="@{/}">На главную</a>
 <div th:if="${error}">
     <p>Ошибка (имя пользователя занято)</p>
 </div>
