personal cabinet with queries without querylist

--- a/src/main/resources/templates/query.html
+++ b/src/main/resources/templates/query.html
@@ -4,12 +4,13 @@
     <title>Форма запроса</title>
 </head>
 <body>
-<form th:action="@{/query}" method="post">
+<form th:action="@{/personal/query}" method="post">
     <label for="name">Имя:</label>
     <input type="text" id="name" name="name" required />
     <label for="text">Текст запроса:</label>
     <input type="text" id="text" name="text" required/>
     <button type="submit">Отправить</button>
 </form>
+<a th:href="@{/personal}"><p>Назад в личный кабинет</p></a>
 </body>
 </html>
