query list added to personal account

--- a/src/main/resources/templates/querylist.html
+++ b/src/main/resources/templates/querylist.html
@@ -4,7 +4,30 @@
     <title>Мои заявки</title>
 </head>
 <body>
+<h1>Запросы</h1>
+<div th:if="${not #lists.isEmpty(queries)}">
+    <table>
+        <thead th:unless="${#lists.isEmpty(queries)}">
+        <tr>
+            <th>Вы представились как:</th>
+            <th>Ваш Email</th>
+            <th>Текст заявки</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="query : ${queries}">
+            <td th:text="${query.name}">Имя</td>
+            <td th:text="${query.email}">Email</td>
+            <td th:text="${query.text}">Текст</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 
+
+<div th:if="${#lists.isEmpty(queries)}">
+    <p>Запросы не найдены.</p>
+</div>
 <a th:href="@{/personal}"><p>Назад в личный кабинет</p></a>
 </body>
 </html>
