added status and date for queries

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Вход</title>
+  <title>Login</title>
 </head>
 <body>
 <a th:href="@{/}">На главную</a>
