--- a/src/main/resources/templates/query.html
+++ b/src/main/resources/templates/query.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Форма запроса</title>
+    <title>Send Query</title>
 </head>
 <body>
 <form th:action="@{/personal/query}" method="post">
