--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Результат запроса</title>
+    <title>Query result</title>
 </head>
 <body>
 <div th:if="${error}">
