--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <title>Event Agency Home</title>
 </head>
 <body>
-<h1>Welcome to Our Event Agency!</h1>
+<h1>Агентство по организации мероприятий</h1>
 
 <p><a href="/login">Войти</a></p>
 <p><a href="/register">Зарегистрироваться</a></p>
