--- a/src/main/resources/templates/personal.html
+++ b/src/main/resources/templates/personal.html
@@ -3,7 +3,7 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
     <meta charset="UTF-8">
-    <title>Event Agency Personal</title>
+    <title>Personal</title>
 </head>
 <body>
 <h1>Личный кабинет</h1>
