--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Регистрация</title>
+    <title>Registration</title>
 </head>
 <body>
 <a th:href="@{/}">На главную</a>
