--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -3,7 +3,7 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
     <meta charset="UTF-8">
-    <title>Event Agency Home</title>
+    <title>Test</title>
 </head>
 <body>
 <h1>Test!</h1>
