--- a/src/main/resources/templates/query.html
+++ b/src/main/resources/templates/query.html
@@ -4,6 +4,7 @@
     <title>Send Query</title>
 </head>
 <body>
+<h1>Отправить заявку</h1>
 <form th:action="@{/personal/query}" method="post">
     <label for="name">Имя:</label>
     <input type="text" id="name" name="name" required />
