main tasks done

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -10,6 +10,7 @@
 <p><a href="/">На главную</a></p>
 <a th:href="@{/admin/allqueries}"><h3>Все заявки</h3></a>
 <a th:href="@{/admin/allusers}"><h3>Все пользователи</h3></a>
+<a th:href="@{/admin/add}"><h3>Добавить мероприятие</h3></a>
 
 
 </body>
