--- a/src/main/resources/templates/personal.html
+++ b/src/main/resources/templates/personal.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Личный кабинет</h1>
 <p><a href="/">На главную</a></p>
-<a th:href="@{/personal/query}"><h3>Оставить заявку на проведение вашего мероприятия</h3></a>
+<a th:href="@{/personal/query}"><h3>Оставить заявку на организацию мероприятия</h3></a>
 <a th:href="@{/personal/myqueries}"><h3>Мои заявки</h3></a>
 <form sec:authorize="isFullyAuthenticated()" th:action="@{/logout_m}" method="get">
     <h3><input type="submit" value="Выйти" /></h3>
